src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManagerEmail__c</fullName>
        <formula>Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ManagerEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerID__c</fullName>
        <formula>Manager.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ManagerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerTitle__c</fullName>
        <formula>Manager.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ManagerTitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Text__c</fullName>
        <formula>Manager.FirstName + &quot; &quot; +  Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileLicenseType__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProfileLicenseType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q9__ElementsEmail__c</fullName>
        <label>Elements Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Q9__ElementsId__c</fullName>
        <externalId>true</externalId>
        <label>Elements Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Q9__IsElementsUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the user has access to Elements.</description>
        <label>Elements User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Geo__c</fullName>
        <businessOwnerGroup>Sales</businessOwnerGroup>
        <description>Refers to the global region covered by the sales user. JIRA: SFDCSPT-422</description>
        <inlineHelpText>Refers to the global region covered by the sales user.</inlineHelpText>
        <label>Rep Geo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>EMEA - All</fullName>
                </value>
                <value>
                    <fullName>EMEA - North</fullName>
                </value>
                <value>
                    <fullName>EMEA - South</fullName>
                </value>
                <value>
                    <fullName>NA - All</fullName>
                </value>
                <value>
                    <fullName>NA - East</fullName>
                </value>
                <value>
                    <fullName>NA - West</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                    <isActive>false</isActive>
                    <label>Account Management</label>
                </value>
                <value>
                    <fullName>ROW</fullName>
                    <isActive>false</isActive>
                    <label>ROW</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reports_to_ID__c</fullName>
        <label>Reports to ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_User_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( IsActive, &quot;Active&quot;, &quot;Inactive&quot; )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sugar_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Sugar ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Show_Copado_Tips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Copado Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Work_Manager_Panels__c</fullName>
        <description>JSON containing current user panels on the Backlog</description>
        <label>Work Manager Panels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>s4g_currencies__EndPoint__c</fullName>
        <formula>$Api.Partner_Server_URL_160</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndPoint</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>If_active_user_require_Rep_Geo</fullName>
        <active>true</active>
        <description>This Validation Rule requires that a regional pick list value be chosen in the Rep Geo field when a user is assigned one of the profiles specified in this rule. JIRA: SFDCSPT-446</description>
        <errorConditionFormula>AND(IsActive,ISBLANK(TEXT(Rep_Geo__c)),
OR(
Profile.Name = &quot;Neo4j - SDR&quot;,
Profile.Name = &quot;Neo4j - SDR Manager&quot;,
Profile.Name = &quot;Neo4j - Sales&quot;,
Profile.Name = &quot;Neo4j - Sales Manager&quot;,
Profile.Name = &quot;Neo4j - Executive&quot;,
Profile.Name = &quot;Neo4j - Business Development&quot;))</errorConditionFormula>
        <errorDisplayField>Rep_Geo__c</errorDisplayField>
        <errorMessage>Please fill in the rep geo field</errorMessage>
    </validationRules>
</CustomObject>